Agregados encabezados faltantes

--- a/index.html
+++ b/index.html
@@ -40,21 +40,27 @@
             <h2>2. Encabezados y Propiedades del Texto</h2>
 
             <div>
-                <h1>Encabezado h1</h1>
-                <h2>Encabezado h2</h2>
-                <h3>Encabezado h3</h3>
-                <h4>Encabezado h4</h4>
-                <h5>Encabezado h5</h5>
-                <h6>Encabezado h6</h6>
+                <h4>Diferentes tamaños de encabezados: </h4>
+                <div>
+                    <h1>Encabezado h1</h1>
+                    <h2>Encabezado h2</h2>
+                    <h3>Encabezado h3</h3>
+                    <h4>Encabezado h4</h4>
+                    <h5>Encabezado h5</h5>
+                    <h6>Encabezado h6</h6>
+                </div>
             </div>
 
             <div>
-                <p><b>Texto en negrita</b></p>
-                <p><em>Texto en cursiva</em></p>
-                <p><strong>Texto con strong</strong></p>
-                <p><u>Texto subrayado</u></p>
-                <p><mark>Texto remarcado</mark></p>
-                <p><span>Texto enmarcado en span</span></p>
+                <h4>Diferentes propiedades de texto: </h4>
+                <div>
+                    <p><b>Texto en negrita</b></p>
+                    <p><em>Texto en cursiva</em></p>
+                    <p><strong>Texto con strong</strong></p>
+                    <p><u>Texto subrayado</u></p>
+                    <p><mark>Texto remarcado</mark></p>
+                    <p><span>Texto enmarcado en span</span></p>
+                </div>
             </div>
 
         </section>
