Corregidos errores y agregados separadores entre secciones

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
     <head>
-        <h1>Encabezado principal</h1>
+        <h1>Trabajo Práctico HTML</h1>
     </head>
 
     <main>
 
+        <hr>
         <nav id="inicio">
+            <h3>Índice</h3>
             <ul>
                 <li><a href="#estructura">Ir a Estructura</a></li>
                 <li><a href="#propiedades">Ir a Encabezados y propiedades</a></li>
@@ -25,6 +27,8 @@
             </ul>
         </nav>
 
+        <hr>
+
         <section id="estructura">
 
             <h2>1. Estructura Básica del Documento HTML</h2>
@@ -34,6 +38,8 @@
             </p>
 
         </section>
+
+        <hr>
 
         <section id="propiedades">
 
@@ -65,6 +71,8 @@
 
         </section>
 
+        <hr>
+
         <section id="divisiones">
             
             <h2>3. Divisiones y Agrupación de Contenido</h2>
@@ -84,6 +92,8 @@
             </div>
 
         </section>
+
+        <hr>
 
         <section id="listas">
 
@@ -133,6 +143,8 @@
 
         </section>
 
+        <hr>
+
         <section id="multimedia">
 
             <h2>5. Elementos Multimedia</h2>
@@ -160,6 +172,8 @@
             </div>
 
         </section>
+
+        <hr>
 
         <section id="tablas">
 
@@ -207,6 +221,8 @@
 
         </section>
 
+        <hr>
+
         <section id="formulario">
 
             <h2>7. Formularios</h2>
@@ -237,6 +253,9 @@
         </section>
 
     </main>
+
+    <hr>
+
 
     <footer id="final">
 
